authors = [
    { name = "Tanusri Rimmalapudi" }
]

keywords = ["pace", "real-estate", "public-records", "data-engineering", "fastapi", "analytics"]

classifiers = ["Development Status :: 3 - Alpha", "Programming Language :: Python :: 3.12", "Framework :: FastAPI", "License :: OSI Approved :: MIT License"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pace-intel"
version = "0.1.0"
description = "Public-record intelligence platform for PACE financing adoption in Riverside, CA"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "prefect>=3.0.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    "aiolimiter>=1.1.0",
    "fake-useragent>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pytest-cov>=6.0.0", "ruff>=0.8.0", "mypy>=1.13.0", "respx>=0.21.0"]

[project.scripts]
pace-intel = "pace_intel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pace_intel"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """ --cov=src/pace_intel --cov-report=term-missing --cov-report=html"""
